--- a/.gitignore
+++ b/.gitignore
@@ -121,13 +121,6 @@ ClientBin/
 # RIA/Silverlight projects
 Generated_Code/
 
-# Backup & report files from converting an old project file to a newer
-# Visual Studio version. Backup files are not needed, because we have git ;-)
-_UpgradeReport_Files/
-Backup*/
-UpgradeLog*.XML
-UpgradeLog*.htm
-
 # SQL Server files
 App_Data/*.mdf
 App_Data/*.ldf
@@ -154,3 +147,10 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+
+# =========================
+# npm & bower
+# =========================
+node_modules
+bower_components
+
