--- a/ClicWars.Account/bower.json
+++ b/ClicWars.Account/bower.json
@@ -8,7 +8,7 @@
     "jquery": "~1.11.0",
     "bootstrap": "~3.0.3",
     "angular-resource": "1.3.1",
-    "angular-cookies": "1.3.1",
+    "angular-cookie": "~4.0.6",
     "angular-sanitize": "1.3.1",
     "angular-route": "1.3.1",
     "angular-animate": "1.3.1",
@@ -19,7 +19,6 @@
   "devDependencies": {
     "angular-mocks": "1.3.1",
     "angular-scenario": "1.3.1",
-    "angular-bootstrap": "~0.11.0",
-    "angular-cookies": "~1.3.1"
+    "angular-bootstrap": "~0.11.0"
   }
 }
