--- a/ClicWars.Game/bower.json
+++ b/ClicWars.Game/bower.json
@@ -8,7 +8,7 @@
     "jquery": "~1.11.0",
     "bootstrap": "~3.0.3",
     "angular-resource": "1.2.15",
-    "angular-cookies": "1.2.15",
+    "angular-cookie": "~4.0.6",
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
     "angular-animate": "~1.2.25",
@@ -18,10 +18,9 @@
   "devDependencies": {
     "angular-mocks": "1.2.15",
     "angular-scenario": "1.2.15",
-    "angular-bootstrap": "~0.11.0",
-    "angular-cookies": "~1.3.1"
+    "angular-bootstrap": "~0.11.0"
   },
   "resolutions": {
-    "angular": "1.2.15"
+    "angular": "1.3.1"
   }
 }
